--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>jp.te4a.spring.boot</groupId>
-	<artifactId>myapp7</artifactId>
+	<artifactId>myapp8</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>myapp7s</name>
+	<name>myapp8</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
