--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>jp.te4a.spring.boot</groupId>
-	<artifactId>myapp9</artifactId>
+	<artifactId>myapp10</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>myapp9</name>
+	<name>myapp10</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -42,9 +42,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+    		<groupId>mysql</groupId>
+  	  		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.23</version>
+    		<scope>runtime</scope>
 		</dependency>
 	</dependencies>	
 	<build>
