--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/teamkadai10db?useUnicode=true?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/teamkadai10db
 spring.datasource.username=springuser
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
